--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -165,7 +165,7 @@
                     <a href="https://github.com/jasper-s-orbit" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="http://codepen.io/jasper-s-orbit" target="_blank" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
                     <a href="https://www.instagram.com/delali_dev" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="www.linkedin.com/in/jeremiah-yankson-dev" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/jeremiah-yankson-dev/" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
             </div>
         </div>
@@ -243,7 +243,7 @@
                         <a href="https://github.com/jasper-s-orbit" aria-label="GitHub"><i class="fab fa-github"></i></a>
                         <a href="http://codepen.io/jasper-s-orbit" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
                         <a href="https://www.instagram.com/delali_dev" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                        <a href="www.linkedin.com/in/jeremiah-yankson-dev" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://www.linkedin.com/in/jeremiah-yankson-dev/" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
             </div>
