--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -163,7 +163,7 @@
                 <h3>Social Media</h3>
                 <div class="social-links-contact">
                     <a href="https://github.com/jasper-s-orbit" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                    <a href="http://codepen.io/jasper-s-orbit" target="_blank" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
+                    <a href="https://codepen.io/Jay-UI-CyberDev" target="_blank" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
                     <a href="https://www.instagram.com/delali_dev" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://www.linkedin.com/in/jeremiah-yankson-dev" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                 </div>
@@ -241,7 +241,7 @@
                     <h4>Connect With Me</h4>
                     <div class="social-links">
                         <a href="https://github.com/jasper-s-orbit" aria-label="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="http://codepen.io/jasper-s-orbit" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
+                        <a href="https://codepen.io/Jay-UI-CyberDev" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
                         <a href="https://www.instagram.com/delali_dev" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/jeremiah-yankson-dev" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
