--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -38,7 +38,7 @@
                 <a href="#contact" class="btn btn-outline">Hire Me</a>
             </div>
             <div class="hero-image">
-                    <img src="3. Jeremiah Yeboah Yankson.jpg" alt="Hero Image" class="hero-img">
+                    <img src="img.jpg" alt="Hero Image" class="hero-img">
             </div>
         </div>
         <a href="#about" class="scroll-down">
