--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header id="header">
         <div class="container header-container">
-            <a href="#" class="logo">Portfo<span>lio</span></a>
+            <a href="#hero" class="logo">Portfo<span>lio</span></a>
             <ul class="nav-links">
                 <li><a href="#hero">Home</a></li>
                 <li><a href="#about">About</a></li>
