--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -56,14 +56,14 @@
                 </div>
                 <div class="about-text">
                     <p>I'm a passionate junior web developer and UI/UX designer with expertise in modern web technologies and design tools. I love creating digital experiences that are both visually appealing and highly functional.</p>
-                    <p>With a strong foundation in HTML5, CSS3, and JavaScript, along with experience in React and Node.js, I can build responsive, interactive websites from scratch. My design skills in Adobe XD and Figma allow me to create user-centered interfaces that enhance the overall user experience.</p>
+                    <p>With a strong foundation in HTML5, CSS3, and JavaScript, along with experience in React and GSAP, I can build responsive, interactive websites from scratch. My design skills in Adobe XD and Figma allow me to create user-centered interfaces that enhance the overall user experience.</p>
                     <p>I'm constantly learning new technologies and design trends to stay at the forefront of web development. My goal is to create solutions that not only meet client requirements but exceed their expectations.</p>
                     <div class="skills">
                         <span class="skill">HTML5</span>
                         <span class="skill">CSS3</span>
                         <span class="skill">JavaScript</span>
                         <span class="skill">React</span>
-                        <span class="skill">Node.js</span>
+                        <span class="skill">GSAP</span>
                         <span class="skill">Adobe XD</span>
                         <span class="skill">Figma</span>
                         <span class="skill">Responsive Design</span>
@@ -106,7 +106,7 @@
             <p>Here are some of my recent projects</p>
             <div class="portfolio-grid">
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Project 1" class="portfolio-image">
+                    <img src="easternflavor.png" alt="Project 1" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>Tourism Website</h3>
                         <p>A website built HTML, CSS and JS to display the delicacies of the Eastern Region</p>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1467232004584-a241de8bcf5d?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Project 2" class="portfolio-image">
+                    <img src="climatechange.png" alt="Project 2" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>Climate Change Website</h3>
                         <p>A website built to educate people on Climate Change</p>
@@ -128,13 +128,46 @@
                     </div>
                 </div>
                 <div class="portfolio-item">
-                    <img src="https://images.unsplash.com/photo-1559028012-481c04fa702d?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=80" alt="Project 3" class="portfolio-image">
+                    <img src="pr.png" alt="Project 3" class="portfolio-image">
                     <div class="portfolio-overlay">
                         <h3>PR Quiz</h3>
                         <p>A quiz made to test students on Product Realization</p>
                         <div class="portfolio-links">
                             <a href="https://trivia-quiz-iota-ebon.vercel.app/"><span><i class="fa-solid fa-link"></i></span></a>
                             <a href="https://github.com/jasper-s-orbit/trivia-quiz"><span><i class="fa-solid fa-code"></i></span></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="easterntour.png" alt="Project 3" class="portfolio-image">
+                    <div class="portfolio-overlay">
+                        <h3>Eastern Region</h3>
+                        <p>A website for MoTAC</p>
+                        <div class="portfolio-links">
+                            <a href="https://eastern-tour.vercel.app/"><span><i class="fa-solid fa-link"></i></span></a>
+                            <a href="https://github.com/jasper-s-orbit/eastern-tour"><span><i class="fa-solid fa-code"></i></span></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="portfolio.png" alt="Project 3" class="portfolio-image">
+                    <div class="portfolio-overlay">
+                        <h3>Portfolio Website</h3>
+                        <p>A portfolio website made for an agricultural engineer and welder</p>
+                        <div class="portfolio-links">
+                            <a href="https://evertt.vercel.app/"><span><i class="fa-solid fa-link"></i></span></a>
+                            <a href="https://github.com/lumoraTech6/evert2"><span><i class="fa-solid fa-code"></i></span></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="portfolio-item">
+                    <img src="artchive.png" alt="Project 3" class="portfolio-image">
+                    <div class="portfolio-overlay">
+                        <h3>ARTchive</h3>
+                        <p>A website gallery created by calling popular gallery APIs</p>
+                        <div class="portfolio-links">
+                            <a href="https://the-ar-tchive.vercel.app/"><span><i class="fa-solid fa-link"></i></span></a>
+                            <a href="https://github.com/lumoraTech6/the-ARTchive"><span><i class="fa-solid fa-code"></i></span></a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +187,7 @@
                 <p><a href="mailto:your-email@example.com">delaliyankson@gmail.com</a></p>
             </div>
             <div class="contact-item">
-                <i class="fas fa-phone-alt contact-icon"></i>
+                <i class="fas fa-phone contact-icon"></i>
                 <h3>Phone</h3>
                 <p><a href="tel:+1234567890">+233 260 555 507</a></p>
             </div>
@@ -169,6 +202,13 @@
                 </div>
             </div>
         </div>
+
+
+
+        <!-- Scroll to Top Button -->
+    <button id="scrollToTopBtn" title="Go to top">
+        <i class="fa-solid fa-arrow-up"></i>
+    </button>
 <!-- 
         <form class="contact-form">
             <div class="form-group">
@@ -247,6 +287,7 @@
                         <a href="https://codepen.io/Jay-UI-CyberDev" aria-label="CodePen"><i class="fab fa-codepen"></i></a>
                         <a href="https://www.instagram.com/delali_dev" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                         <a href="https://www.linkedin.com/in/jeremiah-yankson-dev" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="https://x.com/jasper_rs_orbit" target="_blank" aria-label="X-Twitter"><i class="fa-brands fa-x-twitter"></i></a>
                     </div>
                 </div>
             </div>
@@ -256,7 +297,5 @@
         </div>
     </footer>
 </body>
-<!-- Scripts -->    
-
     <script src="script.js"></script>
 </html>
