--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -177,7 +177,7 @@
 
     <section id="contact">
     <div class="container">
-        <h2>Contact ME</h2>
+        <h2>Contact Me</h2>
         <p>Have a project in mind or want to discuss potential opportunities? Feel free to reach out!</p>
 
         <div class="contact-details">
